--- a/main.html
+++ b/main.html
@@ -4,5 +4,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
+	<h3 id="url">https://localhost:8080/</h3>	 
+	  <form>
+		  <label>Name:</label><br>
+		  <input type="text" id="name" name="name"><br>
+		  <label>Graduation Year:</label><br>
+		  <input type="number" id="year" name="year"><br><br>
+		  <button type="submit" id="button">Submit</button>
+	  </form>
 
 </html>
